# agent-mqi

./: .gitignore  Cargo.toml  LICENSE  README.md
dashboard/: index.html
dashboard/css/: bloomnet.css  mqi.css
dashboard/data/: demo.json  mqi.example.json
dashboard/js/: app.js  chart-audit.js  model-quality.js  mqi-dashboard.js  utils.js
docs/: adr-005-claude-code-only.md  blog-post.md
docs/superpowers/specs/: 2026-04-27-viral-readme-redesign.md
examples/: claude_code_adapter.rs
scripts/: sentiment-data.csv  sentiment-trend.R
src/: baseline.rs  lib.rs  metrics.rs  scoring.rs  traits.rs  transforms.rs
