[package]
name = "agent-mqi"
version = "0.1.0"
edition = "2024"
description = "Model Quality Index (MQI) - 24-metric composite score for detecting AI agent degradation"
license = "MIT"
repository = "https://github.com/alexdgutierreza/agent-mqi"
keywords = ["ai", "agent", "quality", "metrics", "claude"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
